--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.8.0"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    implementation "androidx.room:room-ktx:2.4.2"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
 }
